# stellar-white-belt-paydapp

./: .gitignore  README.md
.github/workflows/: deploy.yml
level-1/: README.md  index.html  package-lock.json  package.json  vite.config.js
level-1/screenshots/: HOW-TO-ADD-SCREENSHOTS.md
level-1/src/: App.jsx  index.css  stellar.js
level-2/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
level-2/contract/: Cargo.toml
level-2/contract/src/: lib.rs  test.rs
level-2/contract/test_snapshots/test/: constructor_rejects_bad_goal.1.json  double_withdraw_is_rejected.1.json  pledge_emits_event.1.json  pledge_updates_state_and_moves_funds.1.json  rejects_non_positive_amount.1.json  rejects_pledge_after_deadline.1.json  repeat_pledge_same_backer_counts_once.1.json  two_backers_counted_separately.1.json  withdraw_after_success_pays_beneficiary.1.json  withdraw_before_deadline_is_rejected.1.json  withdraw_below_goal_is_rejected.1.json
level-2/src/: App.jsx  config.js  crowdfund.js  styles.css  wallet.js
