[package]
name = "crowdfund"
version = "1.0.0"
edition = "2021"
description = "A minimal Soroban crowdfunding contract: pledge native XLM toward a goal before a deadline."

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.3.1"

[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
